@@ -1,5 +1,11 @@
 2002-08-22  Mike Kestner <mkestner@speakeasy.net>
 
+	* glib/IWrapper.cs : remove set_Handle
+	* glib/Object.cs : ditto
+	* glib/Opaque.cs : ditto
+
+2002-08-22  Mike Kestner <mkestner@speakeasy.net>
+
 	* glib/Makefile.in : rm -rf generated on make clean target
 	* gnome/CanvasProxy.cs : add missing Signals hash.
 
